--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,83 +3,95 @@
     ViewData["Title"] = "Tables";
 }
 
-<div class="text-center">
-    <form asp-controller="Home" asp-action="GetTableInfo">
-        <select id ="TableSelect" asp-for="TableName">
-            <option id = "None">Select Table</option>
-            <option id = "First">First</option>
-            <option id = "Second">Second</option>
-            <option id = "Third">Third</option>
-            <option id = "Fourth">Fourth</option>
-            <option id = "Fifth">Fifth</option>
-        </select>
-        <br>
-        <label id = "selectedItem">Please select a table.</label>
-        <br>
-        <input type="hidden">
-        <input id = "submitButton" type="submit" value="Get table info">
-        @if(Model != null)
-        {
-            <input type="hidden" asp-for="TableJson" value="@Model.TableJson">
-        }
-        <br>
-    </form>
-    <div id="AddingDishes" type = "hidden">
-        <input id = "saveButton" asp-action="GetTableInfo" asp-controller="Home" type="submit" value="Save">
-    @if(Model != null && Model.TableName != "Select Table" && Model.Table != null)
-    {
-    <form asp-action="AddDishToOrder" asp-controller="Home">
-        <select id ="DishSelect" asp-for="DishName">
-            <option id = "None">Select Dish</option>
-            <option id = "First">Chicken with fries</option>
-            <option id = "Second">Fish with potatoes</option>
-            <option id = "Third">Schnitzel with salad</option>
-            <option id = "Fourth">Hamburger</option>
-            <option id = "Fifth">Hot Dog</option>
-        </select>
-        <input type="text" asp-for="Quantity" placeholder="Quantity">
-        <input type = "hidden" asp-for="TableJson" value="@Model.TableJson">
-        <input type = "hidden" asp-for="TableName" value="@Model.TableName">
-        @* <input type = "hidden" asp-for="Table.TotalPrice" value="@Model.Table.TotalPrice">
-        <input type="hidden" asp-for="Table.Order" value="@Model.Table.Order"> *@
-        <input type = "submit" value="Add Dish to order">
-    </form>
-    }
-    @if(Model != null && Model.TableName != "Select Table")
-    {
-        <label>Table name: @Model.TableName</label>
-        <br>
-        <label>Price: @Model.Table.TotalPrice</label>
-        <br>
-        if(Model.Table.Order != null)
-        {
-            <h3><label>Order price: @Model.Table.Order.OrderPrice</label></h3>
-            <br>
-            @foreach (var dish in Model.Table.Order.Dishes)
-            {
-                <h5><label>Dish Name: @dish.DishName</label></h5>
+<div class="container">
+    
+    <div class="row">
+        <div class="col-sm">
+        </div>
+        <div class="col-sm text-center">
+                <form id="x" asp-controller="Home" asp-action="GetTableInfo">
+                    <select id ="TableSelect" asp-for="TableName" style="height: 30px;">
+                        <option id = "None">Select Table</option>
+                        <option id = "First">First</option>
+                        <option id = "Second">Second</option>
+                        <option id = "Third">Third</option>
+                        <option id = "Fourth">Fourth</option>
+                        <option id = "Fifth">Fifth</option>
+                    </select>
+                    <br>
+                    <label id = "selectedItem">Please select a table.</label>
+                    <br>
+                    <input type="hidden">
+
+                    <input id = "submitButton" type="submit" value="Get table info"><br>
+                    
+                    @if(Model != null)
+                    {
+                        <input type="hidden" asp-for="TableJson" value="@Model.TableJson">
+                    }
+                </form>
+                <hr><br>
+
+            <div id="AddingDishes" type = "hidden">
+
+                @if(Model != null && Model.TableName != "Select Table" && Model.Table != null)
+                {
+                <form asp-action="AddDishToOrder" asp-controller="Home">
+                    <select id ="DishSelect" asp-for="DishName" style="height: 30px;" style="padding-top: 10px; padding-bottom: 10px;">
+                        <option id = "None">Select Dish</option>
+                        <option id = "First">Chicken with fries</option>
+                        <option id = "Second">Fish with potatoes</option>
+                        <option id = "Third">Schnitzel with salad</option>
+                        <option id = "Fourth">Hamburger</option>
+                        <option id = "Fifth">Hot Dog</option>
+                    </select><br>
+                    <input type="text" placeholder="Quantity" asp-for="Quantity" value=""><br>
+                    <input type = "hidden" asp-for="TableJson" value="@Model.TableJson">
+                    <input type = "hidden" asp-for="TableName" value="@Model.TableName"><br>
+                    <input type = "submit" value="Add Dish to order">
+                </form>
+                }
                 <br>
-                <label>Dish Price: @dish.DishPrice</label>
-                <br>
-                <label>Dish count: @dish.Count</label>
-                <br>
-                <br>
-            }
-        }
-    }
+                @if(Model != null && Model.TableName != "Select Table")
+                {
+                    <input id = "saveButton" asp-action="GetTableInfo" asp-controller="Home" type="submit" value="Save" style="width: 100px; height: 40px;">
+                    <hr>
+                    <br>
+                    <h4>Table name: @Model.TableName</h4>
+                    <h5>Price: @Model.Table.Price</h5>
+                    if(Model.Table.Order != null)
+                    {
+                        <div>
+                        <h5>Order price: @Model.Table.Order.OrderPrice</h5>
+                        @foreach (var dish in Model.Table.Order.Dishes)
+                        {
+                            <form asp-action="EditDish" asp-controller="Home" >
+                                <h5>Dish Name: @dish.DishName</h5>
+                                <h5>Dish Price: @dish.DishPrice</h5>
+                                <h5>Quantity: @dish.Count</h5>
+                                <input type="hidden" asp-for="TableJson" value="@Model.TableJson">
+                                <input type="hidden" asp-for="DishName" value="@dish.DishName">
+                                <input type="submit" value="Edit">
+                            </form>
+                        }
+                        </div>
+                    }
+                }
+            </div>
+        </div>
+        <div class="col-sm">
+        </div>
     </div>
+    
     @section scripts{
         <script>
         $("#TableSelect").change( function() {
             $("#AddingDishes").hide()
-        });
-        @* $("#submitButton").click( function(){
-
-            $("#submitButton").prop("type", "hidden")
         })
-        $("#saveButton").click(function(){
-            $("#submitButton").prop("type", "submit")
-        }) *@
+
+        $("#saveButton").click( function() {
+            $("#AddingDishes").hide()
+        })
         </script>
     }
 </div>
