made order and added inputs validation(numbers)

--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -8,7 +8,7 @@
     {
     <h3><label>Table name: @Model.TableName</label><br></h3>
     <h4><label>Dish name: @Model.Dish.DishName</label><br></h4>
-    <h4><label>Price: @Model.Dish.DishPrice</label><br></h4>
+    <h4><label>Price: @Model.Dish.DishPrice PLN</label><br></h4>
     <h4><label>Quantity: @Model.Dish.Count</label></h4>
 
     <form asp-action="BeginChangingDish" asp-controller="Home">
