--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -15,7 +15,7 @@
             </div>
             <div class="col-sm text-center">
                 <h4>Table: @order.TableName</h4>
-                <h5>Order price: @order.Order.OrderPrice</h5>
+                <h5>Order price: @order.Order.OrderPrice PLN</h5>
             </div>
             <div class="col-sm text-center">
                 <form asp-controller="Orders" asp-action="DeleteOrder">
@@ -25,13 +25,5 @@
             </div>
         </div>
         <hr>
-        @* <h4>Table: @order.TableName</h4>
-        <h5>Order price: @order.Order.OrderPrice</h5>
-        <form>
-            <input type="submit" value="Pay">
-        </form>
-        <form>
-            <input type="submit" class="danger" value="Delete order">
-        </form> *@
     }
 </div>
