--- a/Views/Orders/Payment.cshtml
+++ b/Views/Orders/Payment.cshtml
@@ -15,13 +15,13 @@
             @foreach (var dish in Model.Order.Dishes)
             {
                 <h5>Dish: @dish.DishName</h5>
-                <h6>Price per one: @dish.DishPrice</h6>
+                <h6>Price per one: @dish.DishPrice PLN</h6>
                 <h6>Quantity: @dish.Count</h6><br>
             }
             <hr>
-            <h4>Price: @Model.Order.OrderPrice</h4><br>
-            <h4>Tip: @Model.Tip</h4><br>
-            <h4>Total price: @Model.Price</h4><br>
+            <h4>Price: @Model.Order.OrderPrice PLN</h4><br>
+            <h4>Tip: @Model.Tip PLN</h4><br>
+            <h4>Total price: @Model.Price PLN</h4><br>
             <form asp-action="FinalizePayment" asp-controller="Orders">
                 <input type="hidden" asp-for="TableName" value="@Model.TableName">
                 <input type="submit" value="Pay" style="width: 150px; height: 60px;">
